--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "framer-motion": "^12.23.3",
     "leaflet": "^1.9.4",
+    "libphonenumber-js": "^1.12.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-particles": "^2.12.2",
+    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.6.3",
     "tsparticles": "^3.8.1"
   },
