--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.6.3",
+    "react-spinners": "^0.17.0",
     "tsparticles": "^3.8.1"
   },
   "devDependencies": {
