--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.6.3",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "tsparticles": "^3.8.1"
   },
   "devDependencies": {
