--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "classnames": "^2.5.1",
     "framer-motion": "^12.23.3",
     "leaflet": "^1.9.4",
