--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "libphonenumber-js": "^1.12.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-particles": "^2.12.2",
